[project @ 2005-12-14 22:27:05 by rlubke] Submitted by:  - New build infrastructure.     - Primary goals        * clean up infrastructure (references to tomcat etc)        * make infrastructure server agnostic
  Still to do:
    - Update jsf-portlet
    - Update web page with new instructions

Reviewed by:   edburns

Original author: rlubke
Date: 2005-12-14 22:28:03+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@3481 761efcf2-d34d-6b61-9145-99dcacc3edf1